<resources>
    <string name="app_name">QuiZ</string>
    <string name="quiz_time">Quiz Time !</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="hey_congralutions">Hey, Congralutions !</string>
    <string name="result">Result</string>
    <string name="finish">FINISH</string>
    <string name="image">Image</string>
</resources>