<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ivTrophy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background9"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Result">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textColor="@color/grEEn"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="289dp"
        android:layout_height="284dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        android:elevation="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/trophy" />

    <TextView
        android:id="@+id/tvCongrulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/hey_congralutions"
        android:textColor="@color/c5"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:textColor="@color/c6"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        tools:text="User Name" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="Hey, Congralutions !"
        android:textColor="@color/c7"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_round2"
        android:fontFamily="serif-monospace"
        android:text="@string/finish"
        android:textColor="@color/c8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15dp" />

</LinearLayout>